<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_separator_height"
            android:background="@color/light_separator_color"/>

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginStart="@dimen/large_item_spacing"
          android:layout_marginLeft="@dimen/large_item_spacing"
          android:layout_marginRight="@dimen/large_item_spacing"
          android:layout_marginEnd="@dimen/large_item_spacing"
          android:layout_gravity="center_vertical">

            <TextView
              style="@style/CardViewTitle"
              android:layout_centerVertical="true"
              android:text="@string/recommend_users"/>

            <TextView
              android:id="@+id/txt_more"
              style="@style/CardViewTitleMore"
              android:paddingLeft="0dp"
              android:paddingStart="0dp"
              android:layout_centerVertical="true"
              android:layout_toLeftOf="@+id/img_text_arrow"
              android:layout_toStartOf="@+id/img_text_arrow"
              android:layout_marginEnd="4dp"
              android:layout_marginRight="4dp"
              android:text="@string/recommend_more"/>

            <ImageView
              android:id="@+id/img_text_arrow"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:scaleType="centerInside"
              android:src="@drawable/ic_notification_arrow"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/sns_divider"/>

        <com.charlee.sns.view.RecommendUsersCardView
            android:id="@+id/recommend_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_item_spacing"
            android:background="@color/white">
        </com.charlee.sns.view.RecommendUsersCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/sns_divider"/>

        <RelativeLayout
            android:id="@+id/layout_more"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/txt_close_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/selector_card_title_more_color"
                android:textSize="13sp"
                android:layout_marginRight="@dimen/large_item_spacing"
                android:layout_marginEnd="@dimen/large_item_spacing"
                android:text="@string/close"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_separator_height"
            android:background="@color/light_separator_color"/>

    </LinearLayout>

</FrameLayout>

